--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
   "engines": {
