--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "5.7.1",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
