--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/asmagala/27.5#readme",
   "dependencies": {
+    "chai": "4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mocha": "6.2.1",
     "mongoose": "5.7.1",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
