--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000 --watch \"./test/api/concerts/get.test.js\"",
     "start": "nodemon server.js",
     "build": "cd client && yarn install && yarn build"
   },
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "mocha": "6.2.1",
     "mongoose": "5.7.1",
+    "onchange": "6.1.0",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
